fixed z-index for seats

--- a/src/components/croquis/croquis.styles.scss
+++ b/src/components/croquis/croquis.styles.scss
@@ -156,7 +156,7 @@
 	margin: 30px;
 	margin-top: 100px;
 	position: relative;
-	z-index: -1;
+	z-index: 0;
 	.box-croquis {
 		text-align: center;
 		color: black;
